# jarvis-voice

./: .gitignore  package.json
.github/workflows/: build-on-merge.yml  release.yml
scripts/: release.mjs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent_settings.rs  lib.rs
src-tauri/src/dispatcher/: http.rs  mod.rs
src-tauri/src/voice/: state_machine.rs
src/components/: SettingsPanel.tsx
src/lib/: tauriEvents.ts
src/state/: voiceStore.ts
