[package]
name = "jarvis"
version = "0.1.8"
description = "Jarvis Desktop Assistant"
authors = ["spacebar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
whisper-rs = "0.16.0"
cpal = "0.18.1"
reqwest = { version = "0.13.4", features = ["json"] }

[dev-dependencies]
hound = "3.5.1"
